<resources>
    <string name="app_name">aula3</string>
    <string name="nome">Nome</string>
    <string name="qual_seu_genero">Qual seu gênero?</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="nao_informar">Não informar</string>
    <string name="enviar">Enviar</string>
    <string name="nao_informar_valor">Indefinido</string>
    <string name="enviado">Enviado</string>
    <string name="escolha">você escolheu o gênero:</string>
</resources>